# json-diff-dirs

./: Cargo.toml  LICENSE  README.md
src/: main.rs
