[package]
name = "json-diff-dirs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version="1.0", features=["preserve_order"] }
assert-json-diff = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.3"
colored = "2.0"
